--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ loguru==0.7.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
+yt-dlp>=2025.9.5
+instaloader==4.10.3
 yt-dlp>=2024.9.27
 instaloader==4.10.3
