--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,4 @@ pytest-asyncio==0.21.1
 pytest-mock==3.12.0
 yt-dlp>=2025.9.5
 instaloader==4.10.3
-yt-dlp>=2024.9.27
-instaloader==4.10.3
+ffmpeg-python>=0.2.0
