--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ loguru==0.7.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
-# Pure FFmpeg approach - no need for yt-dlp or instaloader anymore!
-# FFmpeg handles everything directly
+# yt-dlp for URL resolution, FFmpeg for downloading and processing
+yt-dlp>=2025.9.5
