--- a/.gitignore
+++ b/.gitignore
@@ -268,6 +268,7 @@ test_immediate.py
 test_working_v2.py
 test_bot_comprehensive.py
 test_ultimate.py
+quick_test_bypass.py
 
 # Alternative service implementations (development artifacts)
 services/ffmpeg_video_service.py
@@ -280,6 +281,7 @@ services/working_video_service_v2.py
 services/production_video_service.py
 services/ultimate_video_service.py
 services/working_final_service.py
+services/bypass_service.py
 
 # Video files (temporary downloads)
 *.mp4
