--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,54 @@ YOUTUBE_BOT_DETECTION_SOLUTION.md
 PURE_FFMPEG_INTEGRATION.md
 SOLUTION_EXPLANATION.md
 FINAL_REALITY_REPORT.md
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+temp/
+tmp/
+*.tmp
+
+# Browser cookies for video download (NEVER commit these!)
+cookies.txt
+
+# Downloaded content
+downloads/
+
+# FFmpeg binaries (if included)
+ffmpeg*/
