--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ pytest-asyncio==0.21.1
 pytest-mock==3.12.0
 # yt-dlp for URL resolution, FFmpeg for downloading and processing
 yt-dlp>=2025.9.5
+instaloader
