--- a/.gitignore
+++ b/.gitignore
@@ -299,6 +299,7 @@ YOUTUBE_BOT_DETECTION_SOLUTION.md
 PURE_FFMPEG_INTEGRATION.md
 SOLUTION_EXPLANATION.md
 FINAL_REALITY_REPORT.md
+AUTONOMOUS_YOUTUBE_FIX.md
 
 # Python
 __pycache__/
